force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>