force-app/main/default/objects/Case/fields/Publication__c.field-meta.xml
<CustomField>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The Philadelphia Inquirer</fullName>
                </value>
                <value>
                    <fullName>The Daily News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>