force-app/main/default/objects/Case/recordTypes/Digital_Case.recordType-meta.xml
<RecordType>
        <fullName>Digital_Case</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <description>This record type will be used for all Digital Support Cases</description>
        <label>Digital Case</label>
    </RecordType>