force-app/main/default/objects/Case/recordTypes/New_Subscription.recordType-meta.xml
<RecordType>
        <fullName>New_Subscription</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <description>This record type will be used for all new subscriptions</description>
        <label>New Subscription</label>
    </RecordType>