force-app/main/default/objects/Case/recordTypes/Non_digital_Case.recordType-meta.xml
<RecordType>
        <fullName>Non_digital_Case</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <description>This record type will be used for all Non-digital Support Cases</description>
        <label>Non-digital Case</label>
    </RecordType>