force-app/main/default/objects/Case/listViews/All_Non_digital_Cases.listView-meta.xml
<ListView>
        <fullName>All_Non_digital_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Non_digital_Case</value>
        </filters>
        <label>All Non-digital Cases</label>
    </ListView>