force-app/main/default/objects/Case/listViews/Digital_Customer_Service_Case.listView-meta.xml
<ListView>
        <fullName>Digital_Customer_Service_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Digital Customer Service</label>
        <queue>Digital_Customer_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>