force-app/main/default/objects/Case/listViews/Executive_Escalations_Case.listView-meta.xml
<ListView>
        <fullName>Executive_Escalations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Executive Escalations</label>
        <queue>Executive_Escalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>