force-app/main/default/objects/Case/listViews/Finance_Case.listView-meta.xml
<ListView>
        <fullName>Finance_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance</label>
        <queue>Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>