force-app/main/default/objects/Case/listViews/My_Team_s_Cases.listView-meta.xml
<ListView>
        <fullName>My_Team_s_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Team's Cases</label>
        <sharedTo>
            <role>Customer_Service_Management</role>
            <role>Customer_Service_Supervisor</role>
            <role>Digital_Customer_Service_Supervisor</role>
        </sharedTo>
    </ListView>